src/test/ui/rfcs/rfc-2396-target_feature-11/fn-traits.stderr
error[E0277]: expected a `std::ops::Fn<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:24:10
   |
LL | fn call(f: impl Fn()) {
   |                 ---- required by this bound in `call`
...
LL |     call(foo);
   |          ^^^ expected an `Fn<()>` closure, found `fn() {foo}`
   |
   = help: the trait `std::ops::Fn<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error[E0277]: expected a `std::ops::FnMut<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:25:14
   |
LL | fn call_mut(f: impl FnMut()) {
   |                     ------- required by this bound in `call_mut`
...
LL |     call_mut(foo);
   |              ^^^ expected an `FnMut<()>` closure, found `fn() {foo}`
   |
   = help: the trait `std::ops::FnMut<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error[E0277]: expected a `std::ops::FnOnce<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:26:15
   |
LL | fn call_once(f: impl FnOnce()) {
   |                      -------- required by this bound in `call_once`
...
LL |     call_once(foo);
   |               ^^^ expected an `FnOnce<()>` closure, found `fn() {foo}`
   |
   = help: the trait `std::ops::FnOnce<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error[E0277]: expected a `std::ops::Fn<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:28:10
   |
LL | fn call(f: impl Fn()) {
   |                 ---- required by this bound in `call`
...
LL |     call(foo_unsafe);
   |          ^^^^^^^^^^ expected an `Fn<()>` closure, found `unsafe fn() {foo_unsafe}`
   |
   = help: the trait `std::ops::Fn<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error[E0277]: expected a `std::ops::FnMut<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:30:14
   |
LL | fn call_mut(f: impl FnMut()) {
   |                     ------- required by this bound in `call_mut`
...
LL |     call_mut(foo_unsafe);
   |              ^^^^^^^^^^ expected an `FnMut<()>` closure, found `unsafe fn() {foo_unsafe}`
   |
   = help: the trait `std::ops::FnMut<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error[E0277]: expected a `std::ops::FnOnce<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:32:15
   |
LL | fn call_once(f: impl FnOnce()) {
   |                      -------- required by this bound in `call_once`
...
LL |     call_once(foo_unsafe);
   |               ^^^^^^^^^^ expected an `FnOnce<()>` closure, found `unsafe fn() {foo_unsafe}`
   |
   = help: the trait `std::ops::FnOnce<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }
   = note: `#[target_feature]` functions do not implement the `Fn` traits

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
